[DAQ-4468] code cleanup and modernization of gda.scan package
- replace usage of Vector with List/ArrayList
- replace usage of Hashtable with Map/HashMap
- use diamond operator for generics where possible, e.g. new HashMap<>()
- replace usage of string concatenation in logging with {}
- use pattern matching instanceof
- use streams instead of iteration where possible
- return value immediately instead of on next line
- make package-visible field and methods private if possible
- use StringBuilder instead of string concatenation to build messages
- don't catch InterruptedException if not thrown
- use Double.valueOf(str) instead of
Double.parseDouble(str).doubleValue()
- rename variables to fit Java's naming convention
- make top-level classes in same source file inner classes
- fix order of modifiers for methods to meet Java conventions
- for streams use .toList() instead of .collect(Collections.toList())
- make constructor of abstract classes protected
- add private constructor to static utility method classes

Change-Id: I838cb680b2d3e0b100ac744e605a7a043231908f